--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="section-header">
                 <h2 class="section-title text-center wow fadeInDown">Journal Lists</h2>
                 <div class="list-group">
-                  <a href="ijarset/" class="list-group-item">International Journal of Advanced Research in Science, Engineering and Technology (<b>IJARSET</b>)</a>
+                  <a href="ijarset" class="list-group-item">International Journal of Advanced Research in Science, Engineering and Technology (<b>IJARSET</b>)</a>
                   <a href="#" class="list-group-item">International Journal of Advanced Research in Computer Science Engineering and Information Technology (<b>IJARCSEIT</b>)</a>
                   <a href="#" class="list-group-item">International Journal of Advanced Research in Electronics, Communication, Electrical and Instrumentation Engineering (<b>IJARECEIE</b>)</a>
             </div>
