--- a/ijarset/index.html
+++ b/ijarset/index.html
@@ -44,8 +44,8 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Home</a></li>
-                        <li class="scroll"><a href="#about">About</a></li>
-                        <li class="scroll"><a href="#guide">Guidelines</a></li>
+                        <!-- <li class="scroll"><a href="#about">About</a></li> -->
+                        <!-- <li class="scroll"><a href="#guide">Guidelines</a></li> -->
                         <!-- <li class="scroll"><a href="#get-in-touch">Contact</a></li>                         -->
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2>International Journal of Advanced Research in Science, Engineering and Technology</h2>
-                                    <a class="btn btn-primary btn-lg" href="#about">About us</a>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
                         </div>
@@ -76,13 +76,41 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2 style="color:black;">International Journal of Advanced Research in Science, Engineering and Technology</h2>
-                                    <a class="btn btn-primary btn-lg" href="#about">About us</a>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><!--/.item-->
+            <div class="item" style="background-image: url(images/slider/bg3.jpg);">
+                <div class="slider-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h2 style="color:black;">International Journal of Advanced Research in Science, Engineering and Technology</h2>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(images/slider/bg4.jpg);">
+                <div class="slider-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h2 style="color:black;">International Journal of Advanced Research in Science, Engineering and Technology</h2>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div
         </div><!--/.owl-carousel-->
     </section><!--/#main-slider-->
 
@@ -107,7 +135,7 @@
         <div class="container">
 
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">About Us</h2>
+                <h2 class="section-title text-center wow fadeInDown"></h2>
                 <p class="text-center wow fadeInDown">International Journal of Advanced Research in Science, Engineering and Technology is an open-access Multidisciplinary research journal. IJARSET aims are to publish high-quality papers with a specific focus on sciences, engineering, technologies and many more are published here. Original works are invited in the form of research paper/ manuscript. Manuscripts should follow the style of the journal and are subject to both review and editing. Researchers in all science, technology and engineering fields are encouraged to contribute articles based on recent research.</p>
             </div>
 
@@ -117,35 +145,6 @@
     <section id="guide">
         <div class="container">
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">Author Guidelines</h2>
-                <ol>
-                    <li>Manuscripts are to be submitted to astrpublications@gmail.com. Please submit the manuscript as MS Word file (.doc, .docx format) along with the copy right form.</li>
-                    <li>Submissions must be original and should not have been published previously or be under consideration for publication while being evaluated for this journal.</li>
-                    <li>If any copyrighted content is used by the author, the author must get authorization for the same.</li>
-                    <li>
-                        A research article must have the following sections
-                        <ul>
-                            <li>Title of Research Paper</li>
-                            <li>Author’s affiliation with name, designation, dept, college, place, country</li>
-                            <li>
-                                Abstract With Keywords
-                                    <ol type="a">
-                                        <li>Introduction</li>
-                                        <li>Background or related work</li>
-                                        <li>Scope of research</li>
-                                        <li>Proposed methodology</li>
-                                        <li>Results</li>
-                                        <li>Conclusions</li>
-                                        <li>Acknowledgement</li>
-                                        <li>References</li>
-                                        <li>Biography with photo.</li>
-                                    </ol>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>Each manuscript must include a 100 to 150 word abstract and a list of 4-7 keywords.</li>
-                    <li>Submitted article length must be less than or equal to 8 pages.</li>
-                </ol>
                 
             </div>
         </div>
@@ -187,5 +186,8 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript">
+        $(function(){
+    </script>
 </body>
 </html>
