--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+    <!-- Magnific Popup core CSS file -->
+    <link rel="stylesheet" href="css/popup.css">
+
+    <!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
+    <!-- Magnific Popup core JS file -->
+    <script src="js/jquery.popup.js"></script>
 </head><!--/head-->
 
 <body id="home" class="homepage">
@@ -44,7 +52,7 @@
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
                         <li class="scroll active"><a href="#home">Home</a></li>
-                        <li class="scroll"><a href="#about">About</a></li>
+                        <!-- <li class="scroll"><a href="#about">About</a></li> -->
                         <li class="scroll"><a href="#journals">Journals</a></li>
                         <!-- <li class="scroll"><a href="#get-in-touch">Contact</a></li>                         -->
                     </ul>
@@ -62,7 +70,7 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
-                                    <a class="btn btn-primary btn-lg" href="#about">About us</a>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
                         </div>
@@ -76,7 +84,35 @@
                             <div class="col-sm-6">
                                 <div class="carousel-content">
                                     <h2 style="color:black;"><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
-                                    <a class="btn btn-primary btn-lg" href="#about">About us</a>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(images/slider/bg3.jpg);">
+                <div class="slider-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h2 style="color:black;"><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item" style="background-image: url(images/slider/bg4.jpg);">
+                <div class="slider-inner">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="carousel-content">
+                                    <h2 style="color:black;"><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
+                                    <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
                         </div>
@@ -100,20 +136,25 @@
             </div>
         </div>
     </section><!--/#cta-->
- -->
     
 
     <section id="about">
         <div class="container">
 
             <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">About Us</h2>
+                <h2 class="section-title text-center wow fadeInDown"></h2>
                 <p class="text-center wow fadeInDown">Advanced Scientific and Technical Research publications is a worldwide open access peer reviewed online International journals from diverse fields in Medical, Science, Technology, Engineering, Management, Life Sciences, Pharmacy, Veterinary, Journalism, Media Studies, Education, Mathematics, Marketing,Human Resource, Finance, Commerce, Business Studies, Social Sciences,Economics, Humanities and Library Science that emphasize new research and their applications. The inventions and discoveries composed by our publications from our esteemed authors throughout the world without any financially viable. We try our best to widen inventive and important information published in our journals to well known international libraries, institutions and research organizations.</p>
             </div>
-
+            <div class="row">
+                <div class="col-md-4"></div>      
+                <div class="list-group text-center col-md-4" >
+                      <a href="#" class="list-group-item" style="color:red;">Paper Template</a>
+                      <a href="#" class="list-group-item" style="color:red;">CopyRight Form</a>
+                      <a href="guide.html" class="list-group-item" style="color:red;" target="_blank">Author Guide Lines</a>
+                </div>
+            </div>
         </div>
     </section><!--/#about-->
-
     <section id="journals">
         <div class="container">
             <div class="section-header">
@@ -162,5 +203,7 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+    <script type="text/javascript">
+    </script>
 </body>
 </html>
