--- a/ijarset/index.html
+++ b/ijarset/index.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#"><h2 class="section-header text-center">IJARSET</h2></a>
+                    <a href="#"><h3 class="section-header text-center">International Journal of Advanced Research in Science, Engineering and Technology</h3></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
@@ -128,16 +128,11 @@
             </div>
         </div>
     </section><!--/#cta-->
- -->
-    
+ 
 
     <section id="about">
         <div class="container">
-
-            <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown"></h2>
-                <p class="text-center wow fadeInDown">International Journal of Advanced Research in Science, Engineering and Technology is an open-access Multidisciplinary research journal. IJARSET aims are to publish high-quality papers with a specific focus on sciences, engineering, technologies and many more are published here. Original works are invited in the form of research paper/ manuscript. Manuscripts should follow the style of the journal and are subject to both review and editing. Researchers in all science, technology and engineering fields are encouraged to contribute articles based on recent research.</p>
-            </div>
+                <p class="wow fadeInDown">International Journal of Advanced Research in Science, Engineering and Technology is an open-access Multidisciplinary research journal. IJARSET aims are to publish high-quality papers with a specific focus on sciences, engineering, technologies and many more are published here. Original works are invited in the form of research paper/ manuscript. Manuscripts should follow the style of the journal and are subject to both review and editing. Researchers in all science, technology and engineering fields are encouraged to contribute articles based on recent research.</p>
 
         </div>
     </section><!--/#about-->
