Border Color removed

--- a/ijarset/index.html
+++ b/ijarset/index.html
@@ -38,7 +38,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="#"><h3 class="section-header text-center">International Journal of Advanced Research in Science, Engineering and Technology</h3></a>
+                    <a href="#"><h4 class="section-header text-center" style=""><br>International Journal of Advanced Research in Science, Engineering and Technology</h4></a>
                 </div>
 				
                 <div class="collapse navbar-collapse navbar-right">
@@ -134,11 +134,14 @@
         <div class="container">
                 <p class="wow fadeInDown">International Journal of Advanced Research in Science, Engineering and Technology is an open-access Multidisciplinary research journal. IJARSET aims are to publish high-quality papers with a specific focus on sciences, engineering, technologies and many more are published here. Original works are invited in the form of research paper/ manuscript. Manuscripts should follow the style of the journal and are subject to both review and editing. Researchers in all science, technology and engineering fields are encouraged to contribute articles based on recent research.</p>
                 <div class="row">
-                <div class="col-md-6" style="height:300px;background-color:#45AED6">
-                    <h4 class="section-title text-center wow fadeInDown">News & Announcements</h2>
+                <div class="col-md-6" style="height:220px;border-color:#45AED6;border-radius: 25px;border-style: solid;">
+                    <h4 class="section-title text-center wow fadeInDown">Download Papers</h2>
+                    <ul>
+                        <li><a href="#">Volume - II</a></li>
+                    </ul>
                 </div>      
                 <div class="col-md-1"></div>
-                <div class="list-group text-center col-md-5" style="" >
+                <div class="list-group text-center col-md-5" style="" ><br><br>
                       <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">Paper Template</a>
                       <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">CopyRight Form</a>
                       <a href="guide.html" class="list-group-item" style="color:black;background-color:#45AED6;" target="_blank">Author Guide Lines</a>
