--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
                 <p class="wow fadeInDown">Advanced Scientific and Technical Research publications is a worldwide open access peer reviewed online International journals from diverse fields in Medical, Science, Technology, Engineering, Management, Life Sciences, Pharmacy, Veterinary, Journalism, Media Studies, Education, Mathematics, Marketing,Human Resource, Finance, Commerce, Business Studies, Social Sciences,Economics, Humanities and Library Science that emphasize new research and their applications. The inventions and discoveries composed by our publications from our esteemed authors throughout the world without any financially viable. We try our best to widen inventive and important information published in our journals to well known international libraries, institutions and research organizations.</p>
             
             <div class="row">
-                <div class="col-md-6" style="height:300px;background-color:#45AED6">
+                <div class="col-md-6" style="height:220px;border-color:#45AED6;border-radius: 25px;border-style: solid;">
                     <h4 class="section-title text-center wow fadeInDown">News & Announcements</h2>
                 </div>      
                 <div class="col-md-1"></div>
-                <div class="list-group text-center col-md-5" style="" >
+                <div class="list-group text-center col-md-5" style="border-color:#45AED6;" ><br><br>
                       <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">Paper Template</a>
                       <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">CopyRight Form</a>
                       <a href="guide.html" class="list-group-item" style="color:black;background-color:#45AED6;" target="_blank">Author Guide Lines</a>
@@ -159,7 +159,7 @@
     <section id="journals">
         <div class="container">
             <div class="section-header">
-                <h3 class="section-title wow fadeInDown">Journal Lists</h2>
+                <h2 class="wow fadeInDown">List of Journals</h2>
                 <div class="list-group">
                   <a href="ijarset" class="list-group-item">International Journal of Advanced Research in Science, Engineering and Technology (<b>IJARSET</b>)</a>
                   <a href="#" class="list-group-item">International Journal of Advanced Research in Computer Science Engineering and Information Technology (<b>IJARCSEIT</b>)</a>
