--- a/ijarset/index.html
+++ b/ijarset/index.html
@@ -75,7 +75,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2 style="color:black;">International Journal of Advanced Research in Science, Engineering and Technology</h2>
+                                    <h2 style="">International Journal of Advanced Research in Science, Engineering and Technology</h2>
                                     <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2 style="color:black;">International Journal of Advanced Research in Science, Engineering and Technology</h2>
+                                    <h2 style="">International Journal of Advanced Research in Science, Engineering and Technology</h2>
                                     <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
@@ -135,16 +135,16 @@
                 <p class="wow fadeInDown">International Journal of Advanced Research in Science, Engineering and Technology is an open-access Multidisciplinary research journal. IJARSET aims are to publish high-quality papers with a specific focus on sciences, engineering, technologies and many more are published here. Original works are invited in the form of research paper/ manuscript. Manuscripts should follow the style of the journal and are subject to both review and editing. Researchers in all science, technology and engineering fields are encouraged to contribute articles based on recent research.</p>
                 <div class="row">
                 <div class="col-md-6" style="height:220px;border-color:#45AED6;border-radius: 25px;border-style: solid;">
-                    <h4 class="section-title text-center wow fadeInDown">Download Papers</h2>
+                    <h4 class="section-title text-center wow fadeInDown">Recent Issue</h2>
                     <ul>
-                        <li><a href="#">Volume - II</a></li>
+                        <li><a href="#">Volume - I</a></li>
                     </ul>
                 </div>      
                 <div class="col-md-1"></div>
                 <div class="list-group text-center col-md-5" style="" ><br><br>
-                      <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">Paper Template</a>
-                      <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">CopyRight Form</a>
-                      <a href="guide.html" class="list-group-item" style="color:black;background-color:#45AED6;" target="_blank">Author Guide Lines</a>
+                      <a href="#" class="list-group-item" style="color:white;background-color:#45AED6;"><b>Paper Template</b></a>
+                      <a href="#" class="list-group-item" style="color:white;background-color:#45AED6;"><b>CopyRight Form</b></a>
+                      <a href="../guide.html" class="list-group-item" style="color:white;background-color:#45AED6;" target="_blank"><b>Author Guide Lines</b></a>
                 </div>
             </div>
         </div>
@@ -164,6 +164,9 @@
             <div class="row">
                 <div class="col-sm-6">
                     &copy; 2016 Advanced Scientific and Technical Research publications.
+                </div>
+                <div class="col-sm-6 text-right">
+                    Any Queries: <a href="mailto:astrpublications@gmail.com">astrpublications@gmail.com</a>
                 </div>
                 <!-- <div class="col-sm-6">
                     <ul class="social-icons">
@@ -194,8 +197,5 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript">
-        $(function(){
-    </script>
 </body>
 </html>
