--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2 style="color:black;"><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
+                                    <h2 style=""><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
                                     <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
@@ -97,7 +97,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <div class="carousel-content">
-                                    <h2 style="color:black;"><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
+                                    <h2 style=""><span>A</span>dvanced <span>S</span>cientific and <span>T</span>echnical <span>R</span>esearch Publications</h2>
                                     <!-- <a class="btn btn-primary btn-lg" href="#about">About us</a> -->
                                 </div>
                             </div>
@@ -145,13 +145,18 @@
             
             <div class="row">
                 <div class="col-md-6" style="height:220px;border-color:#45AED6;border-radius: 25px;border-style: solid;">
-                    <h4 class="section-title text-center wow fadeInDown">News & Announcements</h2>
+                    <h4 class="section-title text-center wow fadeInDown">News & Updates</h2>
+                    <ul>
+                        <li>IJARSET invites research paper from various engineering disciplines for Vol.2 Issue 01 (May - Aug 2016) issue send papers to <a href="mailto:astrpublications@gmail.com">astrpublications@gmail.com</a>.</li>
+                    </ul> 
+
+
                 </div>      
                 <div class="col-md-1"></div>
                 <div class="list-group text-center col-md-5" style="border-color:#45AED6;" ><br><br>
-                      <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">Paper Template</a>
-                      <a href="#" class="list-group-item" style="color:black;background-color:#45AED6;">CopyRight Form</a>
-                      <a href="guide.html" class="list-group-item" style="color:black;background-color:#45AED6;" target="_blank">Author Guide Lines</a>
+                      <a href="#" class="list-group-item" style="color:white;background-color:#45AED6;"><b>Paper Template</b></a>
+                      <a href="#" class="list-group-item" style="color:white;background-color:#45AED6;"><b>CopyRight Form</b></a>
+                      <a href="../guide.html" class="list-group-item" style="color:white;background-color:#45AED6;" target="_blank"><b>Author Guide Lines</b></a>
                 </div>
             </div>
         </div>
@@ -174,6 +179,9 @@
             <div class="row">
                 <div class="col-sm-6">
                     &copy; 2016 Advanced Scientific and Technical Research publications.
+                </div>
+                <div class="col-sm-6 text-right">
+                    Any Queries: <a href="mailto:astrpublications@gmail.com">astrpublications@gmail.com</a>
                 </div>
                 <!-- <div class="col-sm-6">
                     <ul class="social-icons">
