--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <div class="section-header">
                 <h2 class="wow fadeInDown">List of Journals</h2>
                 <div class="list-group">
-                  <a href="ijarset" class="list-group-item">International Journal of Advanced Research in Science, Engineering and Technology (<b>IJARSET</b>)</a>
+                  <a href="http://ijarset.astrpublications.com/" class="list-group-item">International Journal of Advanced Research in Science, Engineering and Technology (<b>IJARSET</b>)</a>
                   <a href="#" class="list-group-item">International Journal of Advanced Research in Computer Science Engineering and Information Technology (<b>IJARCSEIT</b>)</a>
                   <a href="#" class="list-group-item">International Journal of Advanced Research in Electronics, Communication, Electrical and Instrumentation Engineering (<b>IJARECEIE</b>)</a>
             </div>
